--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -22,4 +22,8 @@
   </div>
 </div>
 {{/each}} --}}
-<p>Hello world!</p>
+
+{{#each interests as |interest| }}
+<p>{{interest.category}}</p>
+{{/each}}
+<p>Please work</p>
