--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -13,9 +13,8 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" src="/Main/public/assets/images/fav-savs-icon.png"></span>
-        <img src="/Main/public/assets/images/fav-savs-icon.png" aria-label="FavSavs">
-        <a href="/homepage">FavSavs</a>
+        {{!-- <span role="img" src="/Main/public/assets/images/fav-savs-icon.png"></span> --}}
+        <img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs">
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
