--- a/Main/views/seesavslist.handlebars
+++ b/Main/views/seesavslist.handlebars
@@ -1,6 +1,6 @@
-<div class="row">
+{{!-- <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, {{name}}</h2>
   </div>
 </div>
 
@@ -45,4 +45,20 @@
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="./js/profile.js"></script> --}}
+
+
+<div><h1>FAVE SAVS</h1></div>
+
+<div><h3>Category Saved</h3></div>
+
+<div class="buttons"><button class="btn">Movies</button>
+
+<button class="btn">Concerts</button>
+
+<button class="btn">Resturants</button>
+
+<button class="btn">Music</button>
+
+<button class="btn">Shows</button>
+</div>
