--- a/Main/public/css/jass.css
+++ b/Main/public/css/jass.css
@@ -153,7 +153,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
+  font-family: inherit; 
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -1009,8 +1009,9 @@ a:hover {
 }
 
 .btn.btn-primary {
-  background-color: #2d3e50;
-  color: #d9e9e8;
+  background-color: #7F5AF0;
+  color: #ffe5ad;
+  border-radius: 45px;
 }
 
 .btn.btn-primary:hover {
