--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -14,16 +14,15 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" src="/assets/images/fav-savs-icon.png"></span>
-        <img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs">
-        <a href="/homepage">FavSavs</a>
+        {{!-- <img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs"> --}}
+        <a href="/homepage"><img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs"></a>
       </h1>
-      <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">Profile</a> |
-        <button class="no-button" id="logout">Logout</button>
+        {{!-- <a href="/profile">Profile</a> |
+        <button class="no-button" id="logout">Logout</button> --}}
         {{else}}
-        <a href="/login">Login</a>
+        {{!-- <a href="/login">Login</a> --}}
         {{/if}}
       </nav>
     </header>
