--- a/Main/views/login.handlebars
+++ b/Main/views/login.handlebars
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="row" id="middle">
+  <div class="col-md-12">
     <h2>Login</h2>
 
     <form class="form login-form">
@@ -16,6 +16,7 @@
       </div>
     </form>
   </div>
+  
   {{!-- <div class="col-md-6">
     <h2>Signup</h2>
 
