created view button on homepage and created list breakout page

--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <h1>HOMEPAGE</h1>
+<button id="see_save" class="btn btn-primary">See Savs</button>
 
 <form class="form-addsav">
   <div>
@@ -11,7 +12,13 @@
   </div>
     <div>
     <label for="category">CATEGORY</label>
-    <input type="category" name="category" id="category" required>
+    <select id="category"> 
+      <option value="movies">Movie</option>
+      <option value="concerts">Concerts</option>
+      <option value="restaurants">Restaurants</option>
+      <option value="music">Music</option>
+
+    </select>
   </div>
   
   <div>
