fixed filtered category page that leads toactual sav and worked on delete button - button failed

--- a/Main/views/actualsavs.handlebars
+++ b/Main/views/actualsavs.handlebars
@@ -16,7 +16,7 @@
         <h4><a href="/interests/{{interest.id}}">{{interest.description}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{interest.id}}">DELETE</button>
+        <button id="delete" class="btn btn-sm btn-danger" data-id="{{interest.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
@@ -24,4 +24,4 @@
   {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="./js/actualsavs.js"></script>
