--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<h1>HOMEPAGE</h1>
+{{!-- <h1>HOMEPAGE</h1> --}}
 <button id="see_save" class="btn btn-primary">See Savs</button>
 
 <form class="form-addsav">
