--- a/Main/views/seesavslist.handlebars
+++ b/Main/views/seesavslist.handlebars
@@ -6,12 +6,14 @@
 
 <div class="buttons">
 
-<button class="btn">Movies</button>
+<button id="movies" class ="btn">Movies</button>
 
-<button class="btn">Concerts</button>
+<button id="concerts" class="btn">Concerts</button>
 
-<button class="btn">Resturants</button>
+<button id="restaurants" class="btn">Resturants</button>
 
-<button class="btn">Music</button>
+<button id="music" class="btn">Music</button>
 
 </div>
+
+<script src="./js/savlistconnect.js"></script>
