adding some final touches to the stylization

--- a/Main/public/css/jass.css
+++ b/Main/public/css/jass.css
@@ -420,12 +420,12 @@ button {
 }
 
 a {
-  color: #1b89bc;
+  color: white;
   text-decoration: none;
 }
 
 a:hover {
-  color: #065b83;
+  color: #ffe5ad;
   text-decoration: underline;
 }
 
