--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -1,5 +1,5 @@
-{{!-- <h1>HOMEPAGE</h1> --}}
-<button id="see_save" class="btn btn-primary">See Savs</button>
+<div class="row" id="middle">
+  <div class="col-md-12">
 
 <form class="form-addsav">
   <div>
@@ -20,10 +20,14 @@
 
     </select>
   </div>
-  
+  <br>
+  <br>
   <div>
-    <input type="submit" value="ADD SAV">
+   <button class="btn btn-primary" type="submit" value="ADD SAV">Add Sav!</button>
+   <button class="btn btn-primary" type="submit" id="see_save">See Sav!</button>
+   {{!-- <button id="see_save" class="btn btn-primary">See Savs</button> --}}
   </div>
 </form>
-
+</div>
+</div>
 <script src="/js/homepage.js"></script>
