--- a/Main/views/interests.handlebars
+++ b/Main/views/interests.handlebars
@@ -2,11 +2,10 @@
 <!-- But we are showing the number of times we visited the homepage -->
 <section class="container">
   <section class="interest">
-    <img src="/images/{{filename}}" alt="{{description}}">
+    <p>Category: {{category}}</p>
     <div class="interest-details">
       <h3>{{savs}}</h3>
-      <p>Category: {{category}}</p>
-      <p>By: {{userId}}</p>
+      <p>{{description}}</p>
     </div>
   </section>
 </section>
