--- a/Main/views/actualsavs.handlebars
+++ b/Main/views/actualsavs.handlebars
@@ -1,22 +1,24 @@
 {{!-- <div class="row mt-4">
   <div class="col-auto">
-    <h2>Welcome, {{user.name}}!</h2>
+    <h2>Welcome, {{name}}!</h2>
   </div>
 </div> --}}
 
-<div class="row mt-4">
+{{!-- <div class="row mt-4"> --}}
 
   {{#if interests.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current interests:</h3>
-
+  <div class="col-md-12 project-list">
+   <h3>Current interests</h3>
+   <br>
+   <br>
     {{#each interests as |interest|}}
     <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/interests/{{interest.id}}">{{interest.description}}</a></h4>
+      <div class="col-md-6">
+
+        <h4><a href="/interests/{{interest.id}}">{{interest.savs}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button id="delete" class="btn btn-sm btn-danger" data-id="{{interest.id}}">DELETE</button>
+        <button id="delete" class="btn btn-sm btn-primary" data-id="{{interest.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
