--- a/Main/views/seesavslist.handlebars
+++ b/Main/views/seesavslist.handlebars
@@ -1,19 +1,17 @@
-
-
-{{!-- <div><h1>FAVE SAVS</h1></div> --}}
-
-<div><h3>Category Saved</h3></div>
-
+<div>
+<h3>Category Saved</h3>
+<br>
+<br>
 <div class="buttons">
 
 <button id="movies" class ="btn">Movies</button>
 
 <button id="concerts" class="btn">Concerts</button>
 
-<button id="restaurants" class="btn">Resturants</button>
+<button id="restaurants" class="btn">Restaurants</button>
 
 <button id="music" class="btn">Music</button>
 
 </div>
-
+</div>
 <script src="./js/savlistconnect.js"></script>
