beautiful styles and fixed logic

--- a/Main/views/actualsavs.handlebars
+++ b/Main/views/actualsavs.handlebars
@@ -1,6 +1,6 @@
 {{!-- <div class="row mt-4">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, {{user}}!</h2>
   </div>
 </div> --}}
 
@@ -24,6 +24,7 @@
     {{/each}}
   </div>
   {{/if}}
+  
 </div>
 
 <script src="./js/actualsavs.js"></script>
