--- a/Main/views/layouts/main.handlebars
+++ b/Main/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         {{!-- <span role="img" src="/Main/public/assets/images/fav-savs-icon.png"></span> --}}
-        <img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs">
+        <img src="/assets/images/fav-savs-icon.png" aria-label="FavSavs" onclick="goToHomepage()">
       </h1>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
@@ -37,7 +37,15 @@
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
+ 
+  
   {{/if}}
 </body>
+
+<script>
+  function goToHomepage() {
+    window.location.href = 'http://localhost:3001/homepage';
+  }
+</script>
 
 </html>
